# raphael-mammeri.github.io

./: .gitignore  404.html  Dockerfile  LICENSE  Makefile  README.md  draft.py  index.html  objects.inv  pyproject.toml
.github/workflows/: docs.yml  test.yml
articles/cookiecutter/: index.html
assets/stylesheets/: custom.scss
blog/: index.html
blog/2023-07-17-how-to-generate-a-python-package-in-5m/: index.html
blog/archive/2023/: index.html
blog/category/machine-learning/: index.html
cv/: index.html
docs/: gen_ref_pages.py  mkdocs.yml  new.py
docs/docs/: about.md  cv.md  generic.md  index.md
docs/docs/articles/: cookiecutter.md
docs/docs/blog/: .authors.yml  index.md
docs/docs/blog/posts/: hello.md
docs/docs/latex/: latex.md
docs/docs/machine_learning/: Introduction.md
docs/docs/notes/: index.md
docs/docs/notes/dl/: backpropagation.md
docs/docs/notes/probability/: dev.md  examples.md  funtions.md  integration.md  introduction.md  measure_theory.md  measure_theory_copy.md
docs/docs/probability/: 1_Introduction.md  Integral.md  examples.md  funtions.md  index.md  integration.md  introduction.md  main.md  measure theory.md  measure_theory.md  measure_theory_basics.md  notations.md
docs/docs/stylesheets/: extra.css
docs/hooks/: hooks.py
docs/includes/: abbreviations.md
docs/javascripts/: shortcuts.js
docs/material/overrides/: main.html
docs/overrides/: home.html  main-styles.html  main.html
docs/overrides/assets/stylesheets/: custom.scss  justify.css
docs/site/: 404.html  index.html  objects.inv
docs/site/about/: index.html
docs/site/articles/cookiecutter/: index.html
docs/site/blog/: index.html
docs/site/blog/2023-07-17-how-to-generate-a-python-package-in-5m/: index 2.html
docs/site/blog/archive/2023/: index.html
docs/site/blog/category/machine-learning/: index 2.html
docs/site/machine_learning/Introduction/: index.html
docs/site/probability/: index 2.html
docs/site/probability/1_Introduction/: index 2.html
docs/site/probability/Integral/: index 2.html
docs/site/probability/examples/: index 2.html
docs/site/probability/funtions/: index 2.html
docs/site/probability/measure_theory_basics/: index.html
docs/site/probability/notations/: index.html
docs/site/reference/SUMMARY/: index 2.html
docs/site/reference/hello/: index.html
docs/site/reference/plugin/: index 2.html
docs/site/search/: search_index.json
empty/: hello.py  plugin.py  settings.py  utils.py  utils_bis.py
notes/: index.html
notes/dl/backpropagation/: index.html
notes/probability/dev/: index.html
notes/probability/examples/: index.html
notes/probability/funtions/: index.html
notes/probability/integration/: index.html
notes/probability/introduction/: index.html
notes/probability/measure_theory/: index.html
notes/probability/measure_theory_copy/: index.html
reference/SUMMARY/: index.html
reference/hello/: index.html
reference/plugin/: index.html
reference/utils/: index.html
reference/utils_bis/: index.html
search/: search_index.json
stylesheets/: extra.css
tests/: test_command.py  test_hello.py
