[tool.poetry]
name = "empty"
version = "0.1.0"
description = ""
authors = ["R.Mammeri <user.medmammeri@gmail.com>"]
readme = "README.md"
packages = [
    { include = "empty" }
    ]
[tool.poetry.dependencies] # main dependency group
python = "^3.8.1" #TODO add hook to have the correct python like poetry does

#TODO How to make an optional a set of predefined requirements
#TODO How to make this entire section optional if docs is not required

[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.1.15"
mkdocs-enumerate-headings-plugin = "^0.6.1"
mkdocstrings = {extras = ["python"], version = "^0.22.0"}
mkdocs-gen-files = "^0.5.0"
mkdocs-literate-nav = "^0.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
