[tool.poetry]
name = "empty"
version = "0.1.0"
description = ""
authors = ["R.Mammeri <user.medmammeri@gmail.com>"]
readme = "README.md"
packages = [
    { include = "empty" }
    ]
[tool.poetry.dependencies] # main dependency group
python = "^3.8.1"

[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.1.15"
mkdocs-enumerate-headings-plugin = "^0.6.1"
mkdocstrings = {extras = ["python"], version = "^0.22.0"}
mkdocs-gen-files = "^0.5.0"
mkdocs-literate-nav = "^0.6.0"

[tool.poetry.group.dev.dependencies]
pydantic = "^1.10.8"
python-dotenv = "^1.0.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.1.0"

[tool.poetry.group.lint.dependencies]
mypy = "^1.3.0"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
colorama = "^0.4.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
